# crafting-interpreters

./: Cargo.toml  README.md  justfile  rust-toolchain.toml  rustfmt.toml
challenges/: Cargo.toml
challenges/src/: lib.rs
jlox/: Cargo.toml
jlox/src/: args.rs  errors.rs  macros.rs  main.rs  runtime.rs  support.rs  tokenizer.rs
jlox/src/tokenizer/: builder.rs  errors.rs  lexeme.rs  literal.rs  location.rs  scanner.rs  token_type.rs
jlox/src/tokenizer/errors/: syntax_error.rs  syntax_trace.rs
jlox/src/tokenizer/errors/syntax_error/: id.rs  types.rs
jlox/src/tokenizer/scanner/: peeker_pattern.rs
jlox/src/tokenizer/token_type/: display.rs
linked-list/: Cargo.toml
linked-list/src/: lib.rs
notes/: main.typ
