[package]
name = "challenges"
version.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = "2.0.18"
