[package]
name = "jlox"
version.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive", "wrap_help"] }
thiserror = "2.0.18"
