[package]
name = "jlox"
version.workspace = true
edition.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.102", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
